# glyph-os-prototype

./: .gitignore  README.md  RELEASE_NOTES.md
.github/workflows/: perf.yml  test.yml
benchmarks/: aggregate_results.py  bench_dynamics.py  bench_fabric.py  bench_persistence.py  bench_spu.py  dynamics_determinism.json  fabric_loopback.json  generate_summary.py  merge_ref_results.json  persistence_baseline.json  persistence_batch5.json  persistence_bench.py  persistence_crash_report.txt  persistence_crash_test.py  persistence_results.json  results_summary.json  spu_merge_compare.json  spu_merge_compare.py  spu_results.json
ci/: check_perf.py
demos/: end_to_end_demo.sh
docs/: fabric_notes.md  merge_fpga_sketch.md  persistence_tuning.md
glyphos-handoff-20251204/: DOCUMENTATION_SUMMARY.txt  EXECUTION_GUIDE.md  INTEGRATION_GUIDE.md  INTEGRATION_QUICK_REF.txt  PRODUCTION_ENHANCEMENTS.md  README.md  README_INTEGRATION.txt  READY_TO_EXECUTE.md  release_manifest.glyphos-node-alpha.json
glyphos-handoff-20251204/runtime/rust/: Cargo.toml  QUICKSTART.md  README.md  docker-compose.yml  test-api.sh  validate.sh
glyphos-handoff-20251204/runtime/rust/glyph-spu/: Cargo.toml  Dockerfile
glyphos-handoff-20251204/runtime/rust/glyph-spu/src/: main.rs
glyphos-handoff-20251204/runtime/rust/glyphd/: Cargo.toml  Dockerfile
glyphos-handoff-20251204/runtime/rust/glyphd/src/: main.rs
renderer/: README.md  render.py
spec/: glyph_spec_v0.yaml
spu/: Makefile  README.md  merge_hls.cpp  merge_reference.cpp  sha256.h  test_merge.cpp
tests/: test_glyph_cli.py
(+3140 files in other folders)
