[workspace]
members = [
    "glyphd",
    "glyph-spu",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Glyph OS Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
